--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "homepage": "https://github.com/kettanaito/react-advanced-form-addons#readme",
   "peerDependencies": {
-    "react": "^15.0.0"
+    "react": "^15.0.0",
+    "react-advanced-form": "^0.17.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -56,7 +57,7 @@
     "jsdom": "^11.6.0",
     "mocha": "^5.0.0",
     "react": "^16.2.0",
-    "react-advanced-form": "^0.16.1",
+    "react-advanced-form": "^0.17.7",
     "react-dom": "^16.2.0",
     "webpack": "^3.10.0"
   }
