--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "module": "src/index.js",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha --require babel-core/register --require babel-polyfill",
-    "storybook": "start-storybook -p 6008",
+    "start": "start-storybook -p 6008",
+    "test": "mocha --require babel-core/register --require babel-polyfill --exit",
     "build": "NODE_ENV=production BABEL_ENV=production webpack",
-    "prepublishOnly": "npm run build",
-    "build-storybook": "build-storybook"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -32,7 +31,7 @@
   "homepage": "https://github.com/kettanaito/react-advanced-form-addons#readme",
   "peerDependencies": {
     "react": "^15.0.0",
-    "react-advanced-form": "^0.18.0"
+    "react-advanced-form": "^0.20.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.15",
@@ -62,7 +61,7 @@
     "jsdom": "^11.6.2",
     "mocha": "^5.0.4",
     "react": "^16.2.0",
-    "react-advanced-form": "^0.18.10",
+    "react-advanced-form": "^1.0.0-alpha",
     "react-dom": "^16.2.0",
     "storybook": "^1.0.0",
     "styled-components": "^3.2.1",
