--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
   "homepage": "https://github.com/kettanaito/react-advanced-form-addons#readme",
   "peerDependencies": {
     "react": "^15.0.0",
-    "react-advanced-form": "^0.20.0"
+    "react-advanced-form": "^1.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.15",
-    "@storybook/addon-links": "^3.3.15",
-    "@storybook/react": "^3.3.15",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "@storybook/addon-actions": "^3.4.3",
+    "@storybook/addon-links": "^3.4.3",
+    "@storybook/react": "^3.4.3",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
-    "babel-minify-webpack-plugin": "^0.3.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -50,18 +50,18 @@
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-import-resolver-webpack": "^0.8.4",
+    "eslint-import-resolver-webpack": "^0.9.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-mocha": "^4.12.1",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-react": "^7.7.0",
     "immutable": "^3.8.2",
     "jsdom": "^11.6.2",
-    "mocha": "^5.0.4",
+    "mocha": "^5.1.1",
     "react": "^16.2.0",
-    "react-advanced-form": "^1.0.0-alpha",
+    "react-advanced-form": "^1.3.2",
     "react-dom": "^16.2.0",
     "storybook": "^1.0.0",
     "styled-components": "^3.2.1",
