--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-advanced-form-addons",
+  "name": "acnp",
   "version": "1.3.3",
-  "description": "Tailor production-ready form prototypes like you mean it.",
+  "description": "",
   "module": "src/index.js",
   "main": "lib/index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kettanaito/react-advanced-form-addons.git"
+    "url": ""
   },
   "keywords": [
     "form",
@@ -23,12 +23,12 @@
     "addon",
     "addons"
   ],
-  "author": "Artem Zakharchenko <kettanaito@gmail.com>",
+  "author": "Andres Castillo <andres@gravity.cr>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kettanaito/react-advanced-form-addons/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/kettanaito/react-advanced-form-addons#readme",
+  "homepage": "",
   "peerDependencies": {
     "react": "^15.0.0",
     "react-advanced-form": "^1.0.0"
@@ -68,6 +68,10 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "feather-icons": "^4.7.0"
+    "feather-icons": "^4.7.0",
+    "react-currency-masked-input": "^2.3.1",
+    "react-dates": "^20.2.4",
+    "react-maskinput": "^1.0.1",
+    "react-number-format": "^4.0.8"
   }
 }
