--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "acnp",
+  "name": "@aazcast/acnp",
   "version": "1.3.3",
-  "description": "",
+  "description": "my build.",
   "module": "src/index.js",
   "main": "lib/index.js",
   "scripts": {
@@ -25,9 +25,6 @@
   ],
   "author": "Andres Castillo <andres@gravity.cr>",
   "license": "MIT",
-  "bugs": {
-    "url": ""
-  },
   "homepage": "",
   "peerDependencies": {
     "react": "^15.0.0",
@@ -73,5 +70,9 @@
     "react-dates": "^20.2.4",
     "react-maskinput": "^1.0.1",
     "react-number-format": "^4.0.8"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   }
 }
